# RDE

./: .gitignore  AGENTS.md  pyproject.toml
2024-CVPR-RDE/: run_rde.sh  sugarcrepe-pedes.py  test.py  train.py
2024-CVPR-RDE/configs/: sugarcrepe_cuhk_pedes.yaml  sugarcrepe_icfg_pedes.yaml  sugarcrepe_rstp_reid.yaml
2024-CVPR-RDE/model/: objectives.py
2024-CVPR-RDE/processor/: processor.py
2024-CVPR-RDE/utils/: options.py
