[project]
name = "rde"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch==2.9.1",
    "torchvision==0.24.1",
    "numpy>=1.26.0",
    "setuptools<81",
    "six",
    "prettytable",
    "easydict",
    "pyyaml",
    "ftfy",
    "regex",
    "tqdm",
    "tensorboard",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "pillow",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
